# propertyDJ

./: .gitignore  pyproject.toml  requirements.txt
builders/: admin.py  api.py  models.py  schemas.py
core/: settings.py  urls.py
inquiries/: api.py  models.py  schemas.py
properties/: admin.py  api.py  models.py  schemas.py
